--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Moon Position Calculator</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Moon Position Calculator</h1>
+<div id="moonPos">Loading...</div>
+<script src="script.js"></script>
+</body>
+</html>
