--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Moon Position Calculator</title>
+<title>Moon Location Tracker</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Moon Position Calculator</h1>
+<h1>Moon Location Tracker</h1>
 <div id="moonPos">Loading...</div>
 <script src="script.js"></script>
 </body>
